src/Player.css
.player {
	background: black;
 	display: block;
	width: 100%;
}

.progress {
	float: left;
}

.progressBar {
	width: 100%;
	height: 5px;
	position: absolute;
	top: 5.5vh;
	background-color: white;
}

.controls {
	position: absolute;
	margin-left: auto;
	margin-right: auto;
	right: 0;
}

.thumbsdown {
	position: absolute;
	font-size: 25px;
	color: white;
	margin: 15px 0px 0px 25px;
	cursor: pointer;
}

.thumbsdown:hover {
	opacity: 0.7;
}

.fullScreen {
	position: absolute;
	font-size: 40px;
	color: lightgrey;
	right: 0;
	margin: 10px 10px 0px 0px;
	opacity: 0.6;
	cursor: pointer;
	text-shadow: 0px 0px 3px #000;
}

.fullScreen:hover {
	opacity: 0.9;
}

.show {
	display: block;
}

.hide {
	display: none;
}

.muting {
	position: absolute;
	font-size: 40px;
	color: lightgrey;
	right: 0;
	margin: 10px 70px 0px 0px;
	opacity: 0.6;
	cursor: pointer;
	text-shadow: 0px 0px 3px #000;
}

.muting:hover {
	opacity: 0.9;
}


.fa-rotate-45 {
    -webkit-transform:rotate(45deg); /* Chrome, Safari, Opera */
}

.volumeSet {
	width: 200px;
	margin-top: 20px;
	margin-right: 60px;
}


.blur{
	/*filter:blur(6px);*/
	pointer-events:none;
}

.minimizedPlayer {
	height: 15vh;
}

.banner {
	background: #212529;
	height: 6vh;
	width: 100%;
}

.left {
	width: 47%;
	position: absolute;
	margin-left: auto;
	margin-right: auto;
	left: 0;
}

.right {
	width: 20%;
	position: absolute;
	margin-top: 7px;
	margin-left: auto;
	margin-right: auto;
	right: 0;
	text-align: right;
}

.center {
	width: 8%;
	position: absolute;
	margin-left: auto;
	margin-right: auto;
	left: 0;
	right: 0;
}

.albumart {
	height: 5vh;
	float: left;
}

.songTitle {
	margin-top: 5px;
	margin-left: 15px;
	color: white;
}

.userName {
	color: white;
	margin-right: 15px;
}

.logo {
	width: 130px;
}

